--- a/trial.html
+++ b/trial.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!-- Viewport Declaration -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>A Little Something About Me</title>
-	
+	<title>Document</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -14,13 +11,8 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
-	
-	<!-- My stylesheet -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
@@ -29,15 +21,15 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
   		<div class="container">
 		    <div class="row">
-		    	<div class="col-xs-12 col-sm-4 col-md-4" style="padding: 0px;">
+		    	<div class="col-md-4" style="border: 1px solid red">
 		    		<header>Ryan Stangle</header>
 				</div>
 
-				<div class="col-sm-4 col-md-4">
-<!-- 					blank space -->
+				<div class="col-md-4" style="border: 1px solid red">
+					ryan stangle
 				</div>
 
-				<div class="col-xs-12 col-sm-4 col-md-4 nav-links">
+				<div class="col-md-4 nav-links" style="border: 1px solid red">
 					<a href="index.html">About</a>&#160;&#160;|&#160;&#160;
 		          	<a href="portfolio.html">Portfolio</a>&#160;&#160;|&#160;&#160;
 		          	<a href="contact.html">Contact</a> 
@@ -48,8 +40,8 @@
 
 	<div class="container"> 
 		<div class="row">
-			<section class="col-xs-12 col-sm-12 col-md-8">
-				<div>
+			<section class="col-md-8">
+				<div style="border: 1px solid red">
 					<h3>About Me</h3>
 				</div>
 				<div>
@@ -67,8 +59,8 @@
 			
 			<div class="col-md-1"></div>
 
-			<aside class="col-xs-12 col-md-3">
-				<div>
+			<aside class="col-md-3">
+				<div style="border: 1px solid red">
 						<h4>Connect with Me</h4>
 						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
               			<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
