--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
@@ -25,35 +27,38 @@
 </head>
 
 <body>
-	
+	<!-- Navigation Bar -->
 	<nav class="navbar navbar-default navbar-fixed-top">
-  		<div class="container">
-		    <div class="row">
-		    	<div class="col-xs-12 col-sm-4 col-md-4" style="padding: 0px;">
-		    		<header>Ryan Stangle</header>
-				</div>
+	  <div class="container">
+	    
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>                        
+	      </button>
+	      <a class="navbar-brand" style="font-size: 24pt; background: #4aaaa5; color:white" href="#">Ryan Stangle</a>
+	    </div>
+	    
+	    <div class="collapse navbar-collapse" id="myNavbar">
+	        <ul class="nav navbar-nav navbar-right">
+	        	<li style="border-right: 1px solid gray"><a href="index.html">About</a></li>
+	        	<li style="border-right: 1px solid gray"><a href="portfolio.html">Portfolio</a></li>
+	        	<li><a href="contact.html">Contact</a></li>
+	      	</ul>
+	    </div>
 
-				<div class="col-sm-4 col-md-4">
-<!-- 					blank space -->
-				</div>
-
-				<div class="col-xs-12 col-sm-4 col-md-4 nav-links">
-					<a href="index.html">About</a>&#160;&#160;|&#160;&#160;
-		          	<a href="portfolio.html">Portfolio</a>&#160;&#160;|&#160;&#160;
-		          	<a href="contact.html">Contact</a> 
-				</div>
-			</div>
-  		</div>
+	  </div>
 	</nav>
 
-	<div class="container"> 
+	<div class="container" style="padding: 0px 30px 0px 30px;"> 
 		<div class="row">
 			<section class="col-xs-12 col-sm-12 col-md-8">
 				<div>
 					<h3>About Me</h3>
 				</div>
 				<div>
-					<img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="img-responsive">
+					<img src="assets/images/yellowstone.jpg" alt="Me at Yellowstone" class="img-responsive">
 	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
 
 	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with those photoshop tools. When a couple of times, I got kinda bored, started lookin' at source code and knew I'd do more. So I designed one little site and my interest was peaked, I said, "Sign-up for boot camp full-stack", and this is my work after only one week.</p>
