--- a/trial.html
+++ b/trial.html
@@ -3,93 +3,72 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
-
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 	
-	<nav class="navbar navbar-default navbar-fixed-top">
-  		<div class="container">
-		    <div class="row">
-		    	<div class="col-md-4" style="border: 1px solid red">
-		    		<header>Ryan Stangle</header>
-				</div>
-
-				<div class="col-md-4" style="border: 1px solid red">
-					ryan stangle
-				</div>
-
-				<div class="col-md-4 nav-links" style="border: 1px solid red">
-					<a href="index.html">About</a>&#160;&#160;|&#160;&#160;
-		          	<a href="portfolio.html">Portfolio</a>&#160;&#160;|&#160;&#160;
-		          	<a href="contact.html">Contact</a> 
-				</div>
-			</div>
-  		</div>
-	</nav>
-
-	<div class="container"> 
-		<div class="row">
-			<section class="col-md-8">
-				<div style="border: 1px solid red">
-					<h3>About Me</h3>
-				</div>
-				<div>
-					<img src="assets/images/yellowstone.jpg" alt="Me at Yellowsotne" class="img-responsive">
-	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
-
-	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with those photoshop tools. When a couple of times, I got kinda bored, started lookin' at source code and knew I'd do more. So I designed one little site and my interest was peaked, I said, "Sign-up for boot camp full-stack", and this is my work after only one week.</p>
-
-	             	<p>Hope you all liked my ode to the <i>"Fresh Prince of Bel-Air<sup>®</sup>"</i>. When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
-
-	            	<p>In my spare time, yeah... I know... what's that, I like to travel, play a little beach volleyball, do some CrossFit <i>(it may actually be a cult)</i>, and just try and relax as much as possible.</p>
-				</div>
-				
-			</section>
-			
-			<div class="col-md-1"></div>
-
-			<aside class="col-md-3">
-				<div style="border: 1px solid red">
-						<h4>Connect with Me</h4>
-						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
-              			<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
-              			<a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
-				</div>
-			</aside>
-		</div>
-	</div>
-
-	<!-- Footer -->
-	<nav class="navbar navbar-default navbar-fixed-bottom">
-  		<div class="container">
-    		&#169; Copyright 2017 Ryan Stangle
- 		</div>
-	</nav>
-	
-	<!-- <div class="container">
-		<aside class="col-md-4" style="float: right">
-			<div style="border: 1px solid red">
-					Is this Right?
-			</div>
-		</aside> -->
-
-	</div>
-
-
-
-
-
-
 </body>
 </html>
