Lay Out and Styled All

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Slabo+27px|Pacifico|Open+Sans:400,400i" rel="stylesheet">
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -38,13 +38,13 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 24pt; background: #4aaaa5; color:white" href="#">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 24pt; background: #4aaaa5; color: white !important" href="#">Ryan Stangle</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
 	        <ul class="nav navbar-nav navbar-right">
-	        	<li style="border-right: 1px solid gray"><a href="index.html">About</a></li>
-	        	<li style="border-right: 1px solid gray"><a href="portfolio.html">Portfolio</a></li>
+	        	<li><a href="index.html">About</a></li>
+	        	<li><a href="portfolio.html">Portfolio</a></li>
 	        	<li><a href="contact.html">Contact</a></li>
 	      	</ul>
 	    </div>
