--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Slabo+27px|Pacifico|Open+Sans:400,400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt" rel="stylesheet">
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -68,7 +67,7 @@
 					    </div>
 					    <div class="form-group">
 					      <label for="message">Message:</label>
-					      <textarea class="form-control" rows="3"></textarea>
+					      <textarea class="form-control" rows="10"></textarea>
 					    </div>
 					    <button type="submit" class="btn btn-default">Submit</button>
 					</form>
