Sidebars are now Bootstrap rows/columns

--- a/contact.html
+++ b/contact.html
@@ -78,12 +78,24 @@
 			<div class="col-md-1"></div>
 
 			<aside class="col-xs-12 col-md-3">
-				<div>
-						<h4>Connect with Me</h4>
-						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
-              			<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
-              			<a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
+				<div class="row">
+					<h4>Connect with Me</h4>
 				</div>
+
+				<div class="row">
+					<div class="col-xs-2 col-sm-2 col-md-4">
+						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
+					</div>
+					<div class="col-xs-2 col-sm-2 col-md-4">
+              				<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
+              		</div>
+              		<div class="col-xs-2 col-sm-2 col-md-4">
+              			<a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
+              		</div>
+              		<div class="col-xs-6 col-sm-6">
+              			<!-- Space holder -->
+              		</div>
+              	</div>
 			</aside>
 		</div>
 	</div>
