--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<img src="assets/images/yellowstone.jpg" alt="Me at Yellowstone" class="img-responsive">
 	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
 
-	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with those photoshop tools. When a couple of times, I got kinda bored, started lookin' at source code and knew I'd do more. So I designed one little site and my interest was peaked, I said, "Sign-up for boot camp full-stack", and this is my work after only one week.</p>
+	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with those photoshop tools. When a couple of times, I got kinda bored, started lookin' at source code and knew I'd do more. So I designed one little site and my interest was peaked, I said, "Sign-up for boot camp full-stack", and this is my work after only two weeks.</p>
 
 	             	<p>Hope you all liked my ode to the <i>"Fresh Prince of Bel-Air<sup>®</sup>"</i>. When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
 
@@ -74,13 +74,27 @@
 			<div class="col-md-1"></div>
 
 			<aside class="col-xs-12 col-md-3">
-				<div>
-						<h4>Connect with Me</h4>
-						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
-              			<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
-              			<a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
+				<div class="row">
+					<h4>Connect with Me</h4>
 				</div>
+
+				<div class="row">
+					<div class="col-xs-2 col-sm-2 col-md-4">
+						<a href="https://github.com/" target="_blank"><img src="assets/images/github.png" alt="Github icon" class="connect-icons"></a>
+					</div>
+					<div class="col-xs-2 col-sm-2 col-md-4">
+              				<a href="https://linkedin.com/in/ryan-stangle-55525470" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn icon" class="connect-icons"></a>
+              		</div>
+              		<div class="col-xs-2 col-sm-2 col-md-4">
+              			<a href="https://behance.net/rstangle/" target="_blank"><img src="assets/images/behance.png" alt="Behance icon" class="connect-icons"></a>
+              		</div>
+              		<div class="col-xs-6 col-sm-6">
+              			<!-- Space holder -->
+              		</div>
+              	</div>
+              
 			</aside>
+
 		</div>
 	</div>
 
