Finals - Stop messing with it

--- a/index.html
+++ b/index.html
@@ -59,14 +59,19 @@
 					<h3>About Me</h3>
 				</div>
 				<div>
-					<img src="assets/images/yellowstone.jpg" alt="Me at Yellowstone" class="img-responsive">
-	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, to eat a sub, and I'll tell you how I became the prince of a site called GitHub.</p>
+					<div class="thumbnail img-responsive">
+						<img src="assets/images/yellowstone.jpg" alt="Me at Yellowstone" class="img-responsive">
+	            		<div class="caption">
+	            			<p>Thats me at Yellowstone.</p>
+	            		</div>
+	            	</div>
+	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, with a beer on tap, and I'll tell you how I became the prince of Twitter<sup>®</sup> Bootstrap<sup>®</sup>.</p>
 
-	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with those photoshop tools. When a couple of times, I got kinda bored, started lookin' at source code and knew I'd do more. So I designed one little site and my interest was peaked, I said, "Sign-up for boot camp full-stack", and this is my work after only two weeks.</p>
+	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with photoshopin' tools. When a couple of times, I got kinda bored, started lookin' at some code and knew there was more. So I designed one little site and my interest was peaked, I said, "Sign-up for UCF coding boot camp", and this is my work after only two weeks.</p>
 
 	             	<p>Hope you all liked my ode to the <i>"Fresh Prince of Bel-Air<sup>®</sup>"</i>. When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
 
-	            	<p>In my spare time, yeah... I know... what's that, I like to travel, play a little beach volleyball, do some CrossFit <i>(it may actually be a cult)</i>, and just try and relax as much as possible.</p>
+	            	<p>In my spare time, yeah... I know... what's that, I like to travel, play a little beach volleyball, do some CrossFit <i>(it may actually be a cult, wanna join?)</i>, and just try and relax as much as possible.</p>
 				</div>
 				
 			</section>
