--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt" rel="stylesheet">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt|Unica+One" rel="stylesheet">
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -35,7 +36,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 24pt; background: #4aaaa5; color: white !important" href="#">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 30pt; color: white !important" href="#">Ryan Stangle</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
