--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt|Unica+One" rel="stylesheet">
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -38,7 +38,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 24pt; background: #4aaaa5; color: white !important" href="#">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 30pt; color: white !important" href="#">Ryan Stangle</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
@@ -62,12 +62,12 @@
 					<div class="thumbnail img-responsive">
 						<img src="assets/images/yellowstone.jpg" alt="Me at Yellowstone" class="img-responsive">
 	            		<div class="caption">
-	            			<p>Thats me at Yellowstone.</p>
+	            			<p>Thats me at Yellowstone</p>
 	            		</div>
 	            	</div>
-	            	<p>Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, with a beer on tap, and I'll tell you how I became the prince of Twitter<sup>®</sup> Bootstrap<sup>®</sup>.</p>
+	            	<p> <span style="font-style: italic;"> Now this is a story all about how my life got flipped-turned upside down. And I'd like to take a minute, with a beer on tap, and I'll tell you how I became the prince of Twitter<sup>®</sup> Bootstrap<sup>®</sup>.</span></p>
 
-	            	<p>In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with photoshopin' tools. When a couple of times, I got kinda bored, started lookin' at some code and knew there was more. So I designed one little site and my interest was peaked, I said, "Sign-up for UCF coding boot camp", and this is my work after only two weeks.</p>
+	            	<p><span style="font-style: italic;">In east Central Florida, raised and trained, in Adobe<sup>®</sup> Photoshop<sup>®</sup> is where I spent most of my days. Chillin' out maxin' relaxin' all cool, an' changin' up backgrounds with photoshopin' tools. When a couple of times, I got kinda bored, started lookin' at some code and knew there was more. So I designed one little site and my interest was peaked, I said, "Sign-up for UCF coding boot camp", and this is my work after only two weeks.</span></p>
 
 	             	<p>Hope you all liked my ode to the <i>"Fresh Prince of Bel-Air<sup>®</sup>"</i>. When I'm not writing rap paradies, I'm busy as a Senior Graphic Designer with print and web experience. My web experience has always been on the design side, so I'd like to gain knowledge and experience on the development side as well. Not gonna lie, this new fangeled web technology is kinda frustrating, but hopefully it will get easier with time.</p>
 
