--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -120,7 +122,13 @@
 
 
 
-
+	<script>
+	    $(document).ready(function () {
+	        $(".navbar-toggle").on("click", function () {
+	            $(this).toggleClass("active");
+	            });
+	    });
+	</script>
 
 
 </body>
