--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,11 @@
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<!-- Added to fix mobile menu dropdown not deploying -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 
