Removed Rollover from NavBar Brand

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
+	
+	<!-- Added to fix mobile menu dropdown not deploying -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -40,7 +41,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 30pt; color: white !important" href="#">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 30pt; background: #4aaaa5; color: white !important" href="#">Ryan Stangle</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
