--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,13 @@
  		</div>
 	</nav>
 	
-
+	<script>
+	    $(document).ready(function () {
+	        $(".navbar-toggle").on("click", function () {
+	            $(this).toggleClass("active");
+	            });
+	    });
+	</script>
 
 
 
