--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 30pt; color: white !important" href="index.html">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 30pt; background: #4aaaa5; color: white !important" href="index.html">Ryan Stangle</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
