--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Oswald:300|Permanent+Marker|Rock+Salt|Unica+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400i|Oswald:300|Patua+One|Permanent+Marker|Rock+Salt|Unica+One" rel="stylesheet">
 	
 	<!-- My stylesheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -42,7 +42,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>                        
 	      </button>
-	      <a class="navbar-brand" style="font-size: 30pt; background: #4aaaa5; color: white !important" href="index.html">Ryan Stangle</a>
+	      <a class="navbar-brand" style="font-size: 30pt; background: #4aaaa5; color: white !important" href="index.html">RYAN STANGLE</a>
 	    </div>
 	    
 	    <div class="collapse navbar-collapse" id="myNavbar">
